syntax = "proto3";

package api.v1.pipeline;

import "operator/api/v1/pipeline/object_status.proto";

// The service for interacting with the operator pipeline
service Service {
  rpc WatchObjectStatus(WatchObjectStatusRequest)
      returns (stream WatchObjectStatusResponse) {}

  rpc DryRun(DryRunRequest) returns (DryRunResponse) {}
}

message WatchObjectStatusRequest {
  string namespace = 1;
}

message WatchObjectStatusResponse {
  ObjectStatusChange change = 1;
}

message DryRunRequest {
  string namespace = 1;
  string capsule = 2;
  // A YAML encoded OperatorConfig, to be used when processing the pipeline.
  string operator_config = 3;
  // An optional YAML encoded capsule spec, to be used instead of the current
  // one.
  string capsule_spec = 4;
  // If force is enabled, existing resources will be handled as if they were
  // supposed to be replaced.
  bool force = 5;
  // Additional objects to be considered materialized when performing the dryrun
  repeated Object additional_objects = 6;
}

message DryRunResponse {
  repeated Object input_objects = 1;
  repeated ObjectChange output_objects = 2;
}

enum ObjectOutcome {
  OBJECT_OUTCOME_UNSPECIFIED = 0;
  OBJECT_OUTCOME_CREATE = 1;
  OBJECT_OUTCOME_UPDATE = 2;
  OBJECT_OUTCOME_DELETE = 3;
  OBJECT_OUTCOME_UNCHANGED = 4;
  OBJECT_OUTCOME_ALREADY_EXISTS = 5;
}

message ObjectChange {
  Object object = 1;
  ObjectOutcome outcome = 2;
}

message Object {
  GVK gvk = 1;
  string name = 2;
  string content = 3;
}
